# falconnplusplus

./: CMakeLists.txt  README.md  setup.py
example/: glove.cpp  random-vectors.py
python/: python_wrapper.cpp
src/: BF.cpp  BuildIndex.cpp  CMakeLists.txt  Falconn++.cpp  FindKNN.cpp  FindKNN.h  Header.cpp  InputParser.cpp  NNDataStructure.h  Test.cpp  Utilities.cpp  Utilities.h
